tests/snapshots/compiler_error_fixtures/primop_read_file_missing_io.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/primop_read_file_missing_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `read_file` requires effect `IO` in this function signature.

  examples/compiler_errors/primop_read_file_missing_io.flx:2:19
  |
2 |     let ignored = read_file("examples/io/input.txt")
  |                   ^^^^^^^^^
  |                   --------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.
== stdout ==
<not executed>
